--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "mocha": "cross-env TZ=UTC NODE_OPTIONS=${npm_package_config_node_options} TS_NODE_TRANSPILE_ONLY=true mocha --timeout 10000 --colors --exit './{src,migrations}/**/*.test.ts'",
     "dev": "nodemon --watch src --exec ts-node --require tsconfig-paths/register --require dotenv/config src/index.ts",
     "start": "npx tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run mocha -- --exclude '**/flycheck_*.ts'",
+    "start:services": "docker-compose rm --force && docker-compose up --build"
+  },
+  "config": {
+    "node_options": "--require ts-node/register --require tsconfig-paths/register --require reflect-metadata --require dotenv/config"
   },
   "keywords": [],
   "author": "",
@@ -18,14 +23,30 @@
     "knex": "^3.1.0",
     "logform": "^2.7.0",
     "pg": "^8.16.3",
+    "reflect-metadata": "^0.1.14",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.11",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/chai-http": "^4.2.0",
+    "@types/chai-subset": "^1.3.5",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^24.10.0",
+    "@types/sinon": "^17.0.2",
+    "@types/sinon-chai": "^3.2.12",
+    "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.4.0",
+    "chai-subset": "^1.6.0",
+    "cross-env": "^10.1.0",
+    "mocha": "^10.2.0",
     "nodemon": "^3.1.11",
+    "sinon": "^17.0.1",
+    "sinon-chai": "^3.7.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
