feat: activities table  refactor storage structure
Activities Domain:
- Added `ActivitiesEntity` and Zod schema (including `preparation` enum).
- Created migration with support for Soft Deletes (`isDeleted`) and Delta Sync (`updatedAt`).
- Implemented `ActivitiesStorage` interface and `ActivitiesMockStorage` (with `getSince` sync logic).

Refactor:
- Moved existing Skills storage files into `src/storages/skills/` for better organization.
- Updated `DbSchema.ts` to include the Activities table map.

Tooling:
- Added `migration:create` script to `package.json` for generating timestamped migrations.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon --watch src --exec ts-node --require tsconfig-paths/register --require dotenv/config src/index.ts",
     "start": "npx tsc && node dist/index.js",
     "test": "npm run mocha -- --exclude '**/flycheck_*.ts'",
-    "start:services": "docker-compose rm --force && docker-compose up --build"
+    "start:services": "docker-compose rm --force && docker-compose up --build",
+    "migration:create": "knex migrate:make -x ts --migrations-directory ./src/migrations"
   },
   "config": {
     "node_options": "--require ts-node/register --require tsconfig-paths/register --require reflect-metadata --require dotenv/config"
