feat: Setup core UI, Nav, and animation config
This commit establishes the foundational UI and navigation architecture, resolving complex configuration conflicts between Reanimated, NativeWind, and Expo.

**Configuration & Setup:**
* Configured Babel for `react-native-reanimated` and `nativewind`.
* Resolved worklet and config conflicts between libraries.
* Added `declarations.d.ts` for proper SVG type support.

**New Features:**
* **Screens:** Added Home, Activity, Favorite, Learn, and Search screens.
* **Navigation:** Implemented `BottomNavbar` with a custom animated curve and icons.
* **Animation:** Created `useNavbarAnimation` hook for smooth tab transitions.
* **Utils:** Added `navigationRef` (in `src/utils/`) to enable navigation from the persistent bottom bar outside the main navigator.

**Bug Fixes:**
* **Android Layering:** Fixed a z-index issue where selected icons were hidden behind the background circle by wrapping icons in a `View` with `elevation: 10`.

**Refactor:**
* Extracted `AppLayout` to separate layout logic from `App.tsx`.

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -20,7 +20,8 @@
         "foregroundImage": "",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.ReactNativeInspiredMindsClone"
     },
     "web": {
       "favicon": ""
