--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-native-svg-transformer": "^1.5.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
